// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem Component should checkbox and text be checked and empty 1`] = `
<li
  className="sc-EHOje lhpJrP"
>
  <button
    checked={true}
    className="sc-bZQynM kWRFME"
    onClick={[Function]}
  />
  <span
    checked={true}
    className="sc-ifAKCX clBMZx"
    onDoubleClick={[Function]}
  >
    
  </span>
  <button
    className="sc-gzVnrw dTBaCJ"
    onClick={[Function]}
  >
    X
  </button>
</li>
`;

exports[`ListItem Component should checkbox and text be checked and not empty 1`] = `
<li
  className="sc-EHOje lhpJrP"
>
  <button
    checked={true}
    className="sc-bZQynM kWRFME"
    onClick={[Function]}
  />
  <span
    checked={true}
    className="sc-ifAKCX clBMZx"
    onDoubleClick={[Function]}
  >
    some text
  </span>
  <button
    className="sc-gzVnrw dTBaCJ"
    onClick={[Function]}
  >
    X
  </button>
</li>
`;

exports[`ListItem Component should checkbox and text be unchecked and empty 1`] = `
<li
  className="sc-EHOje lhpJrP"
>
  <button
    checked={false}
    className="sc-bZQynM bmWDER"
    onClick={[Function]}
  />
  <span
    checked={false}
    className="sc-ifAKCX cqwElN"
    onDoubleClick={[Function]}
  >
    
  </span>
  <button
    className="sc-gzVnrw dTBaCJ"
    onClick={[Function]}
  >
    X
  </button>
</li>
`;

exports[`ListItem Component should checkbox and text be unchecked and not empty 1`] = `
<li
  className="sc-EHOje lhpJrP"
>
  <button
    checked={false}
    className="sc-bZQynM bmWDER"
    onClick={[Function]}
  />
  <span
    checked={false}
    className="sc-ifAKCX cqwElN"
    onDoubleClick={[Function]}
  >
    some text
  </span>
  <button
    className="sc-gzVnrw dTBaCJ"
    onClick={[Function]}
  >
    X
  </button>
</li>
`;
